--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,22 @@
 @import "_footer.css";
 @import "_header.css";
 @import "_layout.css";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-:root{
-    --colorPrimary:rgba(141, 248, 54, 0.897);
+:root {
+  --colorPrimary: rgba(141, 248, 54, 0.897);
 }
-  
-
 
 /*comun*/
 
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-};
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
 
-body{
-    height: 100vh;
-    width: 100%;
-};
+body {
+  height: 100vh;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+}
