--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "_footer.css";
 @import "_header.css";
 @import "_layout.css";
+@import "_sectionUp.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 :root {
