--- a/css/_sectionUp.css
+++ b/css/_sectionUp.css
@@ -2,7 +2,7 @@
     height: 50px;
     width: 50px;
     border-radius: 20px;
-    margin-left: 90px;
+    margin-left: 742px;
 
 }
 .banner__info{
@@ -17,4 +17,16 @@
     flex-direction: row;
     width: 2.2rem;
     margin: 1rem;
+}
+.banner img{
+    display: flex;
+    height: 37px;
+    width: 54px;;
+    margin-left: 100px;
+} 
+
+.banner {
+    max-width: 100px;
+    
+
 }
