--- a/css/_sectionUp.css
+++ b/css/_sectionUp.css
@@ -4,24 +4,25 @@ h1{
 }
 
 .banner{
-    padding-left: 30px;
-    color:rgba(255, 255, 255, 0.637);
+    background: tomato;
+    padding: 30px;
+    color:white;
     padding: 10px;
     display: flex;
-    justify-content: flex-start;
-    max-width: 90%;
+    justify-content: center; 
 }
 
 .banner__info{
     padding: 25px;
     text-align: start;
-    width: 36%;
+    width: 40%;
     line-height: 1.4rem;    
 }
 .banner__icons{
-    padding-left: 30px;
+    padding-left: 60px;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     width: 10%;
     margin: 1rem;
 }
@@ -41,9 +42,12 @@ span{
     margin-left: 12px;
 }
 .banner__img {
-    width: 50%;
-  
+  position: relative;
+  width: 30%;
 }
-.banner__img:hover {filter: grayscale(80%);}
+.banner__img img{
+    width: 90%;
+  }
 
+.banner__img:hover {filter: grayscale(80%);}
 .banner__img:hover {filter: grayscale(80%);}
