--- a/css/_sectionUp.css
+++ b/css/_sectionUp.css
@@ -1,37 +1,44 @@
 h1{
+    
     margin-bottom:20px;
-    border-bottom:solid 1px white;
+    border-bottom:solid 1px var(--colorPrimary);
 }
 
 .banner{
-    background: tomato;
     padding: 30px;
     color:white;
     padding: 10px;
     display: flex;
-    justify-content: center; 
+
 }
 
 .banner__info{
+    font-size: 12px;
     padding: 25px;
     text-align: start;
     width: 40%;
     line-height: 1.4rem;    
 }
+.banner_btn{
+background-color: var(--colorPrimary);
+}
 .banner__icons{
+    font-size: 8px;
+    margin-top: 23px;
     padding-left: 60px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 10%;
-    margin: 1rem;
+    
+    
+    
 }
 span{
-    margin: 20px;
+    
     display: flex;
     flex-direction: column;
 }
 .banner__icons-gluten {
+    margin-top: 20px;
     width: 50px;
 }
 .banner__icons-sugar{
@@ -43,10 +50,16 @@ span{
 }
 .banner__img {
   position: relative;
-  width: 30%;
+  
 }
 .banner__img img{
-    width: 90%;
+  margin: 10px;
+ 
+  width: 330px;
+  margin-left: 59px;
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(3, 3, 3, 0.4)));
+    -webkit-box-shadow: 0px 0px 40px rgba(241, 123, 13, 0.8);;
+  
   }
 
 .banner__img:hover {filter: grayscale(80%);}
