--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import "_body.css";
 @import "_footer.css";
 @import "_header.css";
-@import "_layout.css";
+@import "_sectioncard.css";
 @import "_sectionUp.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
@@ -28,12 +28,10 @@ body {
 }
 .container {
   position: absolute;
-  margin :30px;
-  width: 95%; 
+  margin: 30px;
+  width: 95%;
   height: 80vh;
   background: rgba(255, 249, 249, 0.05);
   border: 4px solid rgba(255, 255, 255, 0.07);
   border-radius: 38px;
-  
 }
-
