--- a/css/_footer.css
+++ b/css/_footer.css
@@ -1,5 +1,5 @@
 footer {
-  padding-top: 86vh;
+  padding-top: 88vh;
   width: 100%;
   height: 90px;
   display: flex;
@@ -8,7 +8,9 @@ footer {
 }
 
 .bottom {
-  font-size: 15px;
+  
+  margin-left: 90px;
+  font-size: 10px;
   color: white;
   margin-top: 40px;
 }
