--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ body {
   position: absolute;
   margin :30px;
   width: 95%; 
-  height: 80vh;
+  min-width: 489px;
+  height: 90vh;
   background: rgba(255, 249, 249, 0.05);
   border: 4px solid rgba(255, 255, 255, 0.07);
   border-radius: 38px;
