--- a/css/_sectionUp.css
+++ b/css/_sectionUp.css
@@ -20,7 +20,12 @@ h1{
     line-height: 1.4rem;    
 }
 .banner_btn{
-background-color: var(--colorPrimary);
+    background-color: var(--colorPrimary);
+    margin-left: 600px;
+    border-radius: 30px;
+    height: 50px;
+    width: 50px;
+    border: none;
 }
 .banner__icons{
     font-size: 8px;
@@ -54,11 +59,11 @@ span{
 }
 .banner__img img{
   margin: 10px;
- 
   width: 330px;
   margin-left: 59px;
-  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(3, 3, 3, 0.4)));
-    -webkit-box-shadow: 0px 0px 40px rgba(241, 123, 13, 0.8);;
+  -webkit-box-reflect: below 10px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(219, 70, 11, 0.678)));
+    -webkit-box-shadow: 0px 0px 10px rgba(241, 123, 13, 0.37);
+
   
   }
 
