--- a/css/_footer.css
+++ b/css/_footer.css
@@ -1,5 +1,5 @@
 footer {
-  padding-top: 88vh;
+  padding-top: 62rem;
   width: 100%;
   height: 90px;
   display: flex;
@@ -12,21 +12,19 @@ footer {
   margin-left: 80px;
   font-size: 10px;
   color: white;
-  
 }
-.below{
-  margin-top:53px;
+.below {
+  margin-top: 53px;
 }
 .belowsocialmedia {
-  
   color: #e46905;
   padding-right: 30px;
   font-size: 30px;
   text-decoration: none;
 }
-.lni-instagram-filled{
-  margin-left:100px;
- }
+.lni-instagram-filled {
+  margin-left: 100px;
+}
 
 .belowsocialmedia:hover,
 .belowsocialmedia:focus {
